--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-meta-unify
-==========
+# meta-unify
 
 This is a yocto layer which holds recipes for the UNIFY project:
 https://www.fp7-unify.eu/
@@ -11,8 +10,33 @@ of meta-openembedded.
 
 Also see https://github.com/carosio/caros-release
 
-License
--------
+# How To Build
+
+To build a deployable image use the [redomat](https://github.com/carosio/redomat),
+please follow the install instructions provided in its README.
+
+The redomat is a simple tool to build an yocto image using a docker container.
+To do so execute:
+
+```
+redomat.py unify-caros-16.04-lamobo-r1.xml
+```
+
+This will build a ready to use SD card image for the bananapi.
+
+# How To Serve Build Artifacts
+
+The result of a build is what we call build artifacts. Build artifacts can
+be build logs, filesystem images, packages and more. It is possible to serve
+these build artifacts via the Docker container used for building:
+
+```
+docker run --rm -ti -p <hostport>:80 <IMAGE> /REDO/results/serve.sh
+```
+
+This will make the build artifacts accessible on `http://localhost:<hostport>`
+
+# License
 
 All metadata is MIT licensed unless otherwise stated. Source code included
 in tree for individual recipes is under the LICENSE stated in each recipe
